Shang New Live/src/objects/Equipment__c.object
<CustomObject>
    <fields>
        <fullName>AEI_Work_Update__c</fullName>
        <label>AEI Work Update</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Air_Flow_Rate_CMH__c</fullName>
        <label>Air Flow Rate (CMH)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Air_Off_Coil_Deg_C__c</fullName>
        <label>Air - Off Coil (Deg C)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_On_Coil_Deg_C__c</fullName>
        <label>Air - On Coil (Deg C)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity_KW__c</fullName>
        <label>Capacity (KW)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity_Litres__c</fullName>
        <label>Capacity (Litres)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity_RT__c</fullName>
        <formula>Capacity_KW__c * 0.284345136094</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capacity (RT)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity (Channels)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist</label>
        <referenceTo>Checklist__c</referenceTo>
        <relationshipLabel>Equipments</relationshipLabel>
        <relationshipName>Equipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Control_Panel_Tag__c</fullName>
        <label>Control Panel Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Purchase__c</fullName>
        <label>Date of Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discharge_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The location of the sischarge line or pipe for the Equipment</description>
        <inlineHelpText>The location of the sischarge line or pipe for the Equipment</inlineHelpText>
        <label>Discharge Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Equipments (Discharge Location)</relationshipLabel>
        <relationshipName>Equipments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Efficiency__c</fullName>
        <label>Efficiency (%)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Category__c</fullName>
        <label>Equipment Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chiller</fullName>
                </value>
                <value>
                    <fullName>AHU</fullName>
                </value>
                <value>
                    <fullName>FCU</fullName>
                </value>
                <value>
                    <fullName>Electrical System</fullName>
                </value>
                <value>
                    <fullName>Fire System</fullName>
                </value>
                <value>
                    <fullName>Plumbing</fullName>
                </value>
                <value>
                    <fullName>Lifts &amp; Escaltors</fullName>
                </value>
                <value>
                    <fullName>Air-Con</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>CCTV</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Escalator</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Fan</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Generator</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>HVAC</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Lifts</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Lifts &amp; Escalators</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>System</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment_ID__c</fullName>
        <label>Equipment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment Level</label>
        <referenceTo>Level__c</referenceTo>
        <relationshipLabel>Equipments</relationshipLabel>
        <relationshipName>Equipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Equipment_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location where Equipment is installed</description>
        <inlineHelpText>Location where Equipment is installed</inlineHelpText>
        <label>Equipment Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Equipments</relationshipLabel>
        <relationshipName>Equipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Equipment_Mode__c</fullName>
        <inlineHelpText>Mode for AHU and FCU</inlineHelpText>
        <label>Equipment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Equipment_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bas</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment_Quantity__c</fullName>
        <label>Equipment Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Equipment_Type__c</fullName>
        <label>Equipment Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Equipment_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Screw Compressor</fullName>
                </value>
                <value>
                    <fullName>Close Loop</fullName>
                </value>
                <value>
                    <fullName>Chilled Water</fullName>
                </value>
                <value>
                    <fullName>Direct Expansion</fullName>
                </value>
                <value>
                    <fullName>Open Loop</fullName>
                </value>
                <value>
                    <fullName>4 Way Cassette</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Automation System</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Axial</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>BIF</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>CHW Ducted Horizontal Floormounted AHU</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>CHW Ducted Vertical AHU</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>CIL</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Ceiling Cassette Type</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Ceiling Fan</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Condenser Water</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Duct Type</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Jet</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Outdoor</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Propeller Fan</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Public Address System</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Vane Axial</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Wallmounted</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Unit the Equipment is located</description>
        <inlineHelpText>Unit the Equipment is located</inlineHelpText>
        <label>Equipment Unit</label>
        <referenceTo>Units__c</referenceTo>
        <relationshipLabel>Equipments</relationshipLabel>
        <relationshipName>Equipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Equipment_Value__c</fullName>
        <inlineHelpText>Equipment Value</inlineHelpText>
        <label>Equipment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Static_Pressure_PA__c</fullName>
        <label>External Static Pressure (PA)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fan_Speed_RPM__c</fullName>
        <label>Fan Speed (RPM)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Asset_ID__c</fullName>
        <label>Fixed Asset ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fresh_Air_Flow_Rate_CMH__c</fullName>
        <label>Fresh Air Flow Rate (CMH)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impeller_Diameter_mm__c</fullName>
        <label>Impeller Diameter (mm)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installation_Date__c</fullName>
        <label>Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Life_Span_years__c</fullName>
        <label>Life Span (years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mobile Module</label>
        <referenceTo>Mobile_Module__c</referenceTo>
        <relationshipLabel>Equipments</relationshipLabel>
        <relationshipName>Equipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>Manufacturer Model</description>
        <inlineHelpText>Manufacturer Model</inlineHelpText>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motor_KW__c</fullName>
        <label>Motor (KW)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person_in_charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person in charge</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Equipments</relationshipLabel>
        <relationshipName>Equipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Power_Supply_V_Ph_Hz__c</fullName>
        <label>Power Supply (V/Ph/Hz)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Name_Text__c</fullName>
        <description>This field is populated by W/F rule</description>
        <inlineHelpText>This field is populated by W/F rule</inlineHelpText>
        <label>Property Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Equipments</relationshipLabel>
        <relationshipName>Equipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Replacement_Parts__c</fullName>
        <label>Replacement Parts</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sensible_Capacity_KW__c</fullName>
        <label>Sensible Capacity (KW)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Serial_No__c</fullName>
        <label>Serial No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicing_Description__c</fullName>
        <label>Servicing Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicing_Intervals_days__c</fullName>
        <label>Servicing Intervals (days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Servicing_Intervals_months__c</fullName>
        <label>Servicing Intervals (months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Servicing_Start_Date__c</fullName>
        <label>Servicing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Servicing_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servicing Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Equipments</relationshipLabel>
        <relationshipName>Equipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Servicing__c</fullName>
        <label>Servicing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serving_Description__c</fullName>
        <label>Serving Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serving_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Level the Equipment is serving</description>
        <inlineHelpText>Level the Equipment is serving</inlineHelpText>
        <label>Serving Level</label>
        <referenceTo>Level__c</referenceTo>
        <relationshipLabel>Equipments (Serving Level)</relationshipLabel>
        <relationshipName>Equipments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Serving_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location the Equipment is Serving</description>
        <inlineHelpText>Location the Equipment is Serving</inlineHelpText>
        <label>Serving Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Equipments (Serving Location)</relationshipLabel>
        <relationshipName>Equipments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Serving_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Unit the Equipment is serving</description>
        <inlineHelpText>Unit the Equipment is serving</inlineHelpText>
        <label>Serving Unit</label>
        <referenceTo>Units__c</referenceTo>
        <relationshipLabel>Equipments (Serving Unit)</relationshipLabel>
        <relationshipName>Equipments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sound_Power_3_M__c</fullName>
        <label>Sound Power @3 M</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stater_Type__c</fullName>
        <label>Stater Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DOL</fullName>
                </value>
                <value>
                    <fullName>Isolator</fullName>
                </value>
                <value>
                    <fullName>SD</fullName>
                </value>
                <value>
                    <fullName>VSD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Dimension_L_x_W_x_H__c</fullName>
        <inlineHelpText>For example, 1090X600X425</inlineHelpText>
        <label>Unit Dimension (L x W x H)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voltage_Phase__c</fullName>
        <label>Voltage (Phase)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Expiry__c</fullName>
        <label>Warranty Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Number__c</fullName>
        <label>Warranty Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Water_Flow_Rate_L_s__c</fullName>
        <label>Water Flow Rate (L/s)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Water_Off_Coil_Deg_C__c</fullName>
        <inlineHelpText>For example, 14.24</inlineHelpText>
        <label>Water - Off Coil (Deg C)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Water_On_Coil_Deg_C__c</fullName>
        <inlineHelpText>For example. 14.23</inlineHelpText>
        <label>Water - On Coil (Deg C)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Equipment</label>
    <nameField>
        <label>Equipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>